--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "imask": "^6.1.0",
     "jquery": "3.5.1",
     "jquery-ujs": "~1.2.2",
+    "jspdf-invoice-template": "^1.3.2",
     "popper.js": "^1.16.1"
   },
   "devDependencies": {
